UI fixes, updated colors (light & dark mode)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,24 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* STYLES FOR DESKTOP SCROLLBAR - START */
+@media (min-width: 768px) {
+  /* For WebKit browsers (Chrome, Edge, Safari) */
+  ::-webkit-scrollbar {
+    width: 4px; /* Narrow scrollbar width */
+    height: 4px; /* Narrow scrollbar height for horizontal scrollbars */
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(135, 135, 135); /* Dark gray color */
+    border-radius: 500px; /* Rounded edges for the thumb */
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(135, 135, 135); /* Slightly darker on hover */
+  }
+  ::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0); /* Light gray track */
+    border-radius: 500px; /* Match thumb's rounded edges */
+  }
+}
+/* STYLES FOR DESKTOP SCROLLBAR - END */
